# Online_Shop

./: .env.example  pyproject.toml
ecommerce_shop/cart/: cart.py  context_processors.py  forms.py  views.py
ecommerce_shop/cart/template/cart/: detail.html
ecommerce_shop/cart/templates/cart/: detail.html
ecommerce_shop/coupons/: admin.py  models.py  views.py
ecommerce_shop/coupons/migrations/: 0001_initial.py
ecommerce_shop/ecommerce_shop/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
ecommerce_shop/locale/en/LC_MESSAGES/: django.po
ecommerce_shop/locale/es/LC_MESSAGES/: django.mo  django.po
ecommerce_shop/locale/ua/LC_MESSAGES/: django.mo  django.po
ecommerce_shop/locale/uk/LC_MESSAGES/: django.mo  django.po
ecommerce_shop/orders/: admin.py  forms.py  models.py  task.py  tasks.py  urls.py  views.py
ecommerce_shop/orders/locale/en/LC_MESSAGES/: django.po
ecommerce_shop/orders/locale/es/LC_MESSAGES/: django.mo  django.po
ecommerce_shop/orders/locale/ua/LC_MESSAGES/: django.mo  django.po
ecommerce_shop/orders/migrations/: 0001_initial.py  0002_order_stripe_id.py  0003_order_coupon_order_discount.py
ecommerce_shop/payment/: tasks.py  views.py  webhooks.py
ecommerce_shop/payment/templates/payment/: canceled.html  completed.html  process.html
ecommerce_shop/shop/: admin.py  models.py  recommender.py  urls.py  views.py
ecommerce_shop/shop/migrations/: 0001_initial.py  0002_rename_categoty_category_and_more.py  0003_translations.py
ecommerce_shop/shop/templates/shop/: base.html
(+7 files in other folders)
