[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"

[project]
name = "ecommerce_shop"
version = "0.0.1"
requires-python = ">=3.14"
dependencies = [
  "celery>=5.6.2",
  "Django==6.0.2",
  "django-stubs==5.2.9",
  "django-stubs-ext==5.2.9",
  "flower>=2.0.1",
  "pillow>=12.1.1",
  "python-decouple>=3.8",
  "rabbitmq>=0.2.0",
  "stripe>=14.4.1",
  "weasyprint>=68.1",
]

[tool.django-stubs]
django_settings_module = "ecommerce_shop.settings"
